--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.2",
         "api-platform/core": "^2.4",
+        "curl/curl": "^2.2",
         "lexik/jwt-authentication-bundle": "^2.6",
         "my-vendor/entity-bundle": "dev-master",
         "sensio/framework-extra-bundle": "^5.1",
