--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@
 ###< lexik/jwt-authentication-bundle ###
 
 /.idea
+###> friendsofphp/php-cs-fixer ###
+/.php_cs
+/.php_cs.cache
+###< friendsofphp/php-cs-fixer ###
