--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "curl/curl": "^2.2",
         "lexik/jwt-authentication-bundle": "^2.6",
         "my-vendor/entity-bundle": "dev-master",
+        "myclabs/php-enum": "^1.7",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
@@ -33,6 +34,7 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "api-platform/schema-generator": "^2.1",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
